@@ -102,6 +102,7 @@ enum mosq_err_t {
 	MOSQ_ERR_RETAIN_NOT_SUPPORTED = 28,
 	MOSQ_ERR_TOPIC_ALIAS_INVALID = 29,
 	MOSQ_ERR_ADMINISTRATIVE_ACTION = 30,
+	MOSQ_ERR_ALREADY_EXISTS = 31,
 };
 
 /* Option values */
