@@ -9,6 +9,8 @@ _mosquitto_client_protocol
 _mosquitto_client_protocol_version
 _mosquitto_client_sub_count
 _mosquitto_client_username
+_mosquitto_control_topic_register
+_mosquitto_control_topic_unregister
 _mosquitto_kick_client_by_clientid
 _mosquitto_kick_client_by_username
 _mosquitto_log_printf
