@@ -17,7 +17,7 @@ test-compile :
 ptest : test-compile
 	./test.py
 
-test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12 13
+test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12 13 14
 
 01 :
 	./01-connect-anon-denied.py
@@ -222,3 +222,6 @@ endif
 	./13-malformed-publish-v5.py
 	./13-malformed-subscribe-v5.py
 	./13-malformed-unsubscribe-v5.py
+
+14 :
+	./14-plugin-register-control.py
