@@ -186,6 +186,8 @@ tests = [
     (1, './13-malformed-publish-v5.py'),
     (1, './13-malformed-subscribe-v5.py'),
     (1, './13-malformed-unsubscribe-v5.py'),
+
+    (1, './14-plugin-register-control.py'),
     ]
 
 ptest.run_tests(tests)
