@@ -20,6 +20,7 @@ Broker:
   SUBSCRIBE, and UNSUBSCRIBE packets.
 - Add `mosquitto_kick_client_by_clientid()` and `mosquitto_kick_client_by_username()`
   functions, which can be used by plugins to disconnect clients.
+- Add support for handling $CONTROL/ topics in plugins.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
